# serializer version: 1
# name: test_layout_metrics_snapshot[ClipFieldToBox]
  dict({
    'backward_links': 0,
    'crossings': 1,
    'foreign_nodes_in_frames': 0,
    'frame_overlaps': 0,
    'height': 277.0,
    'imbalance': 17.0,
    'level_links': 5,
    'link_length': 1614.0,
    'link_span_y': 428.0,
    'links': 10,
    'links_through_nodes': 2,
    'node_overlaps': 0,
    'nodes': 10,
    'reroutes': 0,
    'straight_links': 2,
    'width': 1515.0,
  })
# ---
# name: test_layout_metrics_snapshot[GeometryPrincipalComponents]
  dict({
    'backward_links': 0,
    'crossings': 9,
    'foreign_nodes_in_frames': 0,
    'frame_overlaps': 0,
    'height': 498.0,
    'imbalance': 109.0,
    'level_links': 2,
    'link_length': 3582.0,
    'link_span_y': 2302.0,
    'links': 21,
    'links_through_nodes': 2,
    'node_overlaps': 0,
    'nodes': 10,
    'reroutes': 0,
    'straight_links': 0,
    'width': 910.0,
  })
# ---
# name: test_layout_metrics_snapshot[PrincipalComponents]
  dict({
    'backward_links': 1,
    'crossings': 34,
    'foreign_nodes_in_frames': 0,
    'frame_overlaps': 0,
    'height': 585.0,
    'imbalance': 111.0,
    'level_links': 6,
    'link_length': 10710.0,
    'link_span_y': 4748.0,
    'links': 52,
    'links_through_nodes': 17,
    'node_overlaps': 0,
    'nodes': 24,
    'reroutes': 0,
    'straight_links': 1,
    'width': 2435.0,
  })
# ---
# name: test_layout_metrics_snapshot[SliceToIndices]
  dict({
    'backward_links': 0,
    'crossings': 3,
    'foreign_nodes_in_frames': 0,
    'frame_overlaps': 0,
    'height': 372.0,
    'imbalance': 13.0,
    'level_links': 2,
    'link_length': 1348.0,
    'link_span_y': 855.0,
    'links': 12,
    'links_through_nodes': 0,
    'node_overlaps': 0,
    'nodes': 9,
    'reroutes': 0,
    'straight_links': 0,
    'width': 1020.0,
  })
# ---
# name: test_layout_metrics_snapshot[chain]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'foreign_nodes_in_frames': 0,
    'frame_overlaps': 0,
    'height': 286.0,
    'imbalance': 0.0,
    'level_links': 4,
    'link_length': 137.0,
    'link_span_y': 48.0,
    'links': 4,
    'links_through_nodes': 0,
    'node_overlaps': 0,
    'nodes': 5,
    'reroutes': 0,
    'straight_links': 2,
    'width': 840.0,
  })
# ---
# name: test_layout_metrics_snapshot[diamond]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'foreign_nodes_in_frames': 0,
    'frame_overlaps': 0,
    'height': 590.0,
    'imbalance': 44.0,
    'level_links': 3,
    'link_length': 975.0,
    'link_span_y': 851.0,
    'links': 7,
    'links_through_nodes': 0,
    'node_overlaps': 0,
    'nodes': 6,
    'reroutes': 0,
    'straight_links': 2,
    'width': 680.0,
  })
# ---
# name: test_layout_metrics_snapshot[fan_in]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'foreign_nodes_in_frames': 0,
    'frame_overlaps': 0,
    'height': 1972.0,
    'imbalance': 65.0,
    'level_links': 8,
    'link_length': 4345.0,
    'link_span_y': 4004.0,
    'links': 16,
    'links_through_nodes': 0,
    'node_overlaps': 0,
    'nodes': 17,
    'reroutes': 0,
    'straight_links': 8,
    'width': 540.0,
  })
# ---
# name: test_layout_metrics_snapshot[framed_stages]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'foreign_nodes_in_frames': 0,
    'frame_overlaps': 0,
    'height': 434.0,
    'imbalance': 177.0,
    'level_links': 9,
    'link_length': 1162.0,
    'link_span_y': 343.0,
    'links': 11,
    'links_through_nodes': 2,
    'node_overlaps': 0,
    'nodes': 11,
    'reroutes': 0,
    'straight_links': 9,
    'width': 1805.0,
  })
# ---
# name: test_layout_metrics_snapshot[long_links]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'foreign_nodes_in_frames': 0,
    'frame_overlaps': 0,
    'height': 223.0,
    'imbalance': 82.0,
    'level_links': 4,
    'link_length': 867.0,
    'link_span_y': 41.0,
    'links': 6,
    'links_through_nodes': 3,
    'node_overlaps': 0,
    'nodes': 6,
    'reroutes': 0,
    'straight_links': 4,
    'width': 990.0,
  })
# ---
# name: test_layout_metrics_snapshot[nested_frames]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'foreign_nodes_in_frames': 0,
    'frame_overlaps': 0,
    'height': 524.0,
    'imbalance': 172.0,
    'level_links': 4,
    'link_length': 756.0,
    'link_span_y': 343.0,
    'links': 6,
    'links_through_nodes': 0,
    'node_overlaps': 0,
    'nodes': 6,
    'reroutes': 0,
    'straight_links': 4,
    'width': 955.0,
  })
# ---
# name: test_layout_metrics_snapshot[trunk_with_feeders]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'foreign_nodes_in_frames': 0,
    'frame_overlaps': 0,
    'height': 680.0,
    'imbalance': 199.0,
    'level_links': 7,
    'link_length': 1313.0,
    'link_span_y': 1137.0,
    'links': 10,
    'links_through_nodes': 0,
    'node_overlaps': 0,
    'nodes': 11,
    'reroutes': 0,
    'straight_links': 4,
    'width': 1012.0,
  })
# ---
